--- a/java/pom.xml
+++ b/java/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>api-gateway</module>
+        <module>service-discovery</module>
     </modules>
 
     <properties>
