--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,21 @@ services:
       - 8082:8080
     networks:
       - the-one-network
+  the-one-user-service:
+    build: ./python/user-service
+    container_name: the-one-user-service
+    ports:
+      - 8083:5000
+    networks:
+      - the-one-network
+  the-one-outposts-service:
+    build: ./python/outposts-service
+    container_name: the-one-outposts-service
+    ports:
+      - 8084:5000
+    networks:
+      - the-one-network
+
 
 networks:
   the-one-network:
