--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,27 +15,27 @@ services:
       - "8081:8080"
     networks:
       - the-one-network
-  the-one-auth-service:
-    build: ./haskell/auth-service
-    container_name: the-one-auth-service
-    ports:
-      - 8082:8080
-    networks:
-      - the-one-network
-  the-one-user-service:
-    build: ./python/user-service
-    container_name: the-one-user-service
-    ports:
-      - 8083:5000
-    networks:
-      - the-one-network
-  the-one-outposts-service:
-    build: ./python/outposts-service
-    container_name: the-one-outposts-service
-    ports:
-      - 8084:5000
-    networks:
-      - the-one-network
+#  the-one-auth-service:
+#    build: ./haskell/auth-service
+#    container_name: the-one-auth-service
+#    ports:
+#      - 8082:8080
+#    networks:
+#      - the-one-network
+#  the-one-user-service:
+#    build: ./python/user-service
+#    container_name: the-one-user-service
+#    ports:
+#      - 8083:5000
+#    networks:
+#      - the-one-network
+#  the-one-outposts-service:
+#    build: ./python/outposts-service
+#    container_name: the-one-outposts-service
+#    ports:
+#      - 8084:5000
+#    networks:
+#      - the-one-network
 
 
 networks:
