--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,13 @@ services:
 #      - 8082:8080
 #    networks:
 #      - the-one-network
-#  the-one-user-service:
-#    build: ./python/user-service
-#    container_name: the-one-user-service
-#    ports:
-#      - 8083:5000
-#    networks:
-#      - the-one-network
+  the-one-user-service:
+    build: ./python/user-service
+    container_name: the-one-user-service
+    ports:
+      - 8083:5000
+    networks:
+      - the-one-network
 #  the-one-outposts-service:
 #    build: ./python/outposts-service
 #    container_name: the-one-outposts-service
