--- a/python/user-service/Dockerfile
+++ b/python/user-service/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.7-alpine3.12
 
 COPY ./src /app
-WORKDIR /app
+COPY ./scripts/wait-for-service.sh /app/script.sh
 
 RUN pip install flask
 
-CMD python ./app.py
+WORKDIR /app
+
+CMD ./script.sh python ./app.py
