--- a/python/user-service/Dockerfile
+++ b/python/user-service/Dockerfile
@@ -3,7 +3,10 @@ FROM python:3.7-alpine3.12
 COPY ./src /app
 COPY ./scripts/wait-for-service.sh /app/script.sh
 
-RUN pip install flask
+RUN apk update
+RUN apk add bash
+RUN apk add curl
+RUN pip install flask requests
 
 WORKDIR /app
 
