--- a/angular/package.json
+++ b/angular/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start",
-    "start-the-one-ui-app": "webpack-dev-server --config config/webpack/the-one-ui-app/the-one-ui-app-webpack.dev.js --inline --progess --port 3000 --hot",
+    "start-the-one-ui-app": "webpack serve --config config/webpack/the-one-ui-app/the-one-ui-app-webpack.dev.js --inline --progress --port 3000 --hot",
     "build-the-one-ui-app": "rimraf dist/dist-fea && webpack --config config/webpack/the-one-ui-app/the-one-ui-app-webpack.prod.js --progress --profile --bail"
   },
   "repository": {
@@ -26,37 +26,37 @@
   },
   "homepage": "https://github.com/DigitalCrafting/angular-webpack-starter#readme",
   "dependencies": {
-    "@angular/animations": "10.0.7",
-    "@angular/common": "10.0.7",
-    "@angular/compiler": "10.0.7",
-    "@angular/core": "10.0.7",
-    "@angular/forms": "10.0.7",
-    "@angular/platform-browser": "10.0.7",
-    "@angular/platform-browser-dynamic": "10.0.7",
-    "@angular/router": "10.0.7",
-    "core-js": "2.5.4",
-    "rxjs": "6.4.0",
-    "tslib": "1.10.0",
-    "zone.js": "0.9.1"
+    "@angular/animations": "11.2.3",
+    "@angular/common": "11.2.3",
+    "@angular/compiler": "11.2.3",
+    "@angular/core": "11.2.3",
+    "@angular/forms": "11.2.3",
+    "@angular/platform-browser": "11.2.3",
+    "@angular/platform-browser-dynamic": "11.2.3",
+    "@angular/router": "11.2.3",
+    "core-js": "3.9.0",
+    "rxjs": "6.6.3",
+    "tslib": "2.1.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1000.5",
-    "@angular/cli": "10.0.5",
-    "@angular/compiler-cli": "10.0.7",
-    "@angular/language-service": "10.0.7",
-    "@types/jasmine": "3.5.12",
+    "@angular-devkit/build-angular": "0.1002.2",
+    "@angular/cli": "11.2.1",
+    "@angular/compiler-cli": "11.2.3",
+    "@angular/language-service": "11.2.3",
+    "@types/jasmine": "3.6.4",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "14.0.27",
+    "@types/node": "14.14.31",
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "0.6.2",
     "blueimp-tmpl-loader": "0.0.3",
-    "codelyzer": "5.0.0",
-    "compression-webpack-plugin": "3.0.1",
-    "copy-webpack-plugin": "5.1.1",
-    "css-loader": "3.4.2",
-    "file-loader": "5.0.2",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
+    "codelyzer": "6.0.1",
+    "compression-webpack-plugin": "7.1.2",
+    "copy-webpack-plugin": "7.0.0",
+    "css-loader": "5.0.2",
+    "file-loader": "4.3.0",
+    "html-loader": "1.3.2",
+    "html-webpack-plugin": "5.2.0",
     "istanbul-instrumenter-loader": "3.0.1",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.2",
@@ -72,24 +72,27 @@
     "karma-webpack": "4.0.2",
     "mini-css-extract-plugin": "0.9.0",
     "moment": "2.24.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "5.0.0",
+    "postcss": "8.2.6",
+    "postcss-loader": "5.0.0",
+    "postcss-preset-env": "6.7.0",
     "protractor": "5.4.0",
     "raw-loader": "4.0.0",
     "rimraf": "3.0.0",
-    "sass-loader": "8.0.0",
-    "sass-resources-loader": "2.0.1",
-    "source-map-loader": "0.2.4",
+    "sass-loader": "11.0.1",
+    "sass-resources-loader": "2.1.1",
+    "source-map-loader": "2.0.1",
+    "style-loader": "2.0.0",
     "to-string-loader": "1.1.6",
     "ts-loader": "6.2.1",
-    "ts-node": "8.10.2",
+    "ts-node": "9.1.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "6.1.3",
     "tslint-loader": "3.5.4",
     "typescript": "3.9.7",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "4.2.2"
+    "webpack": "5.24.1",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.7.3"
   }
 }
