--- a/angular/package.json
+++ b/angular/package.json
@@ -26,27 +26,27 @@
   },
   "homepage": "https://github.com/DigitalCrafting/angular-webpack-starter#readme",
   "dependencies": {
-    "@angular/animations": "11.2.3",
-    "@angular/common": "11.2.3",
-    "@angular/compiler": "11.2.3",
-    "@angular/core": "11.2.3",
-    "@angular/forms": "11.2.3",
-    "@angular/platform-browser": "11.2.3",
-    "@angular/platform-browser-dynamic": "11.2.3",
-    "@angular/router": "11.2.3",
+    "@angular/animations": "11.2.2",
+    "@angular/common": "11.2.2",
+    "@angular/compiler": "11.2.2",
+    "@angular/core": "11.2.2",
+    "@angular/forms": "11.2.2",
+    "@angular/platform-browser": "11.2.2",
+    "@angular/platform-browser-dynamic": "11.2.2",
+    "@angular/router": "11.2.2",
     "core-js": "3.9.0",
     "rxjs": "6.6.3",
     "tslib": "2.1.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1002.2",
-    "@angular/cli": "11.2.1",
-    "@angular/compiler-cli": "11.2.3",
-    "@angular/language-service": "11.2.3",
+    "@angular-devkit/build-angular": "0.1102.2",
+    "@angular/cli": "11.2.2",
+    "@angular/compiler-cli": "11.2.2",
+    "@angular/language-service": "11.2.2",
     "@types/jasmine": "3.6.4",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "14.14.31",
+    "@types/node": "14.0.27",
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "0.6.2",
     "blueimp-tmpl-loader": "0.0.3",
@@ -62,7 +62,7 @@
     "jasmine-spec-reporter": "5.0.2",
     "karma": "5.1.1",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "^2.0.3",
+    "karma-coverage": "2.0.3",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "3.3.1",
     "karma-jasmine-html-reporter": "1.5.4",
@@ -84,12 +84,12 @@
     "source-map-loader": "2.0.1",
     "style-loader": "2.0.0",
     "to-string-loader": "1.1.6",
-    "ts-loader": "6.2.1",
-    "ts-node": "9.1.1",
+    "ts-loader": "8.0.17",
+    "ts-node": "8.10.2",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "6.1.3",
     "tslint-loader": "3.5.4",
-    "typescript": "3.9.7",
+    "typescript": "4.1.5",
     "webpack": "5.24.1",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
