--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "karma start",
     "start-the-one-ui-app": "webpack serve --config config/webpack/the-one-ui-app/the-one-ui-app-webpack.dev.js --inline --progress --port 3000 --hot",
-    "build-the-one-ui-app": "rimraf dist/dist-fea && webpack --config config/webpack/the-one-ui-app/the-one-ui-app-webpack.prod.js --progress --profile --bail"
+    "start-the-one-discovery-ui-app": "webpack serve --config config/webpack/the-one-discovery-ui-app/the-one-discovery-ui-app-webpack.dev.js --inline --progress --port 3000 --hot",
+    "build-the-one-ui-app": "rimraf dist/dist-fea && webpack --config config/webpack/the-one-ui-app/the-one-ui-app-webpack.prod.js --progress --profile --bail",
+    "build-the-one-discovery-ui-app": "rimraf dist/dist-fea && webpack --config config/webpack/the-one-discovery-ui-app/the-one-discovery-ui-app-webpack.prod.js --progress --profile --bail"
   },
   "repository": {
     "type": "git",
