--- a/angular/package.json
+++ b/angular/package.json
@@ -22,7 +22,7 @@
     "starter"
   ],
   "author": "Kamil Kasprzyk",
-  "license": "Apache 2.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/DigitalCrafting/angular-webpack-starter/issues"
   },
