--- a/java/pom.xml
+++ b/java/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>api-gateway</module>
         <module>service-discovery</module>
+        <module>the-one-ui</module>
     </modules>
 
     <properties>
