--- a/java/the-one-ui/pom.xml
+++ b/java/the-one-ui/pom.xml
@@ -9,6 +9,10 @@
     <artifactId>the-one-ui</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <angular.project.path>${pom.basedir}/../../angular/</angular.project.path>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -37,6 +41,51 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>build-angular</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>build-angular-app</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <workingDirectory>${angular.project.path}</workingDirectory>
+                                    <executable>npm</executable>
+                                    <commandlineArgs>run build-the-one-ui-app</commandlineArgs>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-resources</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${basedir}/target/</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${angular.project.path}dist/dist-the-one-ui/</directory>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>dev-local</id>
             <activation>
