--- a/java/the-one-ui/pom.xml
+++ b/java/the-one-ui/pom.xml
@@ -73,7 +73,7 @@
                                     <goal>copy-resources</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${basedir}/target/</outputDirectory>
+                                    <outputDirectory>${basedir}/target/classes/</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>${angular.project.path}dist/dist-the-one-ui/</directory>
