--- a/python/user-service/Dockerfile
+++ b/python/user-service/Dockerfile
@@ -6,8 +6,12 @@ COPY ./scripts/wait-for-service.sh /app/script.sh
 RUN apk update
 RUN apk add bash
 RUN apk add curl
-RUN pip install flask requests
 
 WORKDIR /app
 
-CMD ./script.sh python ./app.py
+COPY ./requirements.txt ./requirements.txt
+
+RUN pip install -r requirements.txt
+
+#CMD ./script.sh python ./app.py
+CMD python ./app.py
