Added users and outposts services in Java with DB connection

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -16,6 +16,8 @@
         <module>api-gateway</module>
         <module>service-discovery</module>
         <module>the-one-ui</module>
+        <module>users-service</module>
+        <module>outposts-service</module>
     </modules>
 
     <properties>
@@ -31,12 +33,13 @@
         <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
         <bcprov-jdk15on.version>1.63</bcprov-jdk15on.version>
         <httpclient.version>4.5.13</httpclient.version>
+        <mybatis-spring-boot-starter.version>2.1.3</mybatis-spring-boot-starter.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.springfamework</groupId>
+                <groupId>org.springframework</groupId>
                 <artifactId>spring-jdbc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
@@ -118,10 +121,6 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -168,6 +167,20 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
+        <!-- MyBatis -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
         </dependency>
 
         <dependency>
