--- a/java/users-service/src/main/envs/application-dev-local.properties
+++ b/java/users-service/src/main/envs/application-dev-local.properties
@@ -1,12 +1,12 @@
 server.port=8083
+application.server.ip=localhost
 
-the-one.discovery.ip=the-one-discovery
-the-one.discovery.port=8081
+the-one.discovery.url=http://localhost:8081
 
 spring.datasource.url=jdbc:mysql://localhost:6033/user_db
 spring.datasource.username=user_service
 spring.datasource.password=user_service_pass
-spring.datasource.driver-class-name=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=NULL
